--- a/index.html
+++ b/index.html
@@ -26,16 +26,25 @@
 			<p class="contact-title">Contact me!</p>
 			<div class="link-container">
 			<div>
+				
+				<a href="https://www.w3schools.com">
 				<img class="contact" src="iconmonstr-facebook-5-240.png" height="42" width="42">
+				</a>
 			</div>
 			<div>
+				<a href="https://github.com/justinzhang416">
 				<img class="contact" src="iconmonstr-github-1-72.png" height="42" width="42">
+				</a>
 			</div>
 			<div>
+				<a href="mailto:justin_zhang@brown.edu">
 				<img class="contact" src="iconmonstr-email-11-72.png" height="42" width="42">
+				</a>
 			</div>  
 			<div>
+				<a href="https://www.linkedin.com/in/justin-zhang-7554b5120/">
 				<img class="contact" src="iconmonstr-linkedin-5-72.png" height="42" width="42">
+				</a>
 			</div>
 			<div>
 				<img class="contact" src="csv.png" height="42" width="42">
