--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 				</a>
 			</div>
 			<div>
+				<a href="CSResume.docx">
 				<img class="contact" src="csv.png" height="42" width="42">
+				</a>
 			</div>
 		</div>
 		</div>
