--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 	<div class="content">
 		<div class="left">
 			<header><strong>Hi, my name is Justin.</strong></header>
-			<p>My first paragraph. There will probably be more stuff here.</p>
-			<p>My second paragraph. I had an internship at blah, blah, blah.</p>
-			<p>My first paragraph. I'm a TA.</p>
-			<p>My first paragraph.</p>
+			<p>I'm a junior at Brown University, studying Computer Science and Applied Mathematics.</p>
+			<p>Currently a undergraduate teaching assistant for CS1010, Theory of Computation.</p>
+			<p>Experience with software engineering, web development, and data science.</p>
+			<p>Avid basketball fan.</p>
 		</div>
 		<div class="right">
 			<p class="contact-title">Contact me!</p>
@@ -47,7 +47,7 @@
 				</a>
 			</div>
 			<div>
-				<a href="CSResume.docx">
+				<a href="cs.docx">
 				<img class="contact" src="csv.png" height="42" width="42">
 				</a>
 			</div>
