--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<link rel="icon" href="logo.png">
+
 	<link rel="stylesheet" href="main.css">
 	<link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -17,12 +19,14 @@
 	<div class="content">
 		<div class="left">
 			<header><strong>Hi, my name is Justin.</strong></header>
-			<p>I'm a junior at Brown University, studying Computer Science and Applied Mathematics.</p>
+			<p>Junior at Brown University, studying Computer Science and Applied Mathematics.</p>
 			<p>Currently a undergraduate teaching assistant for CS1010, Theory of Computation.</p>
 			<p>Experience with software engineering, web development, and data science.</p>
 			<p>Avid basketball fan.</p>
 		</div>
 		<div class="right">
+			<img class="logo" src="logo.png" height="60" width="60">
+			<p class="tag"> 2018 </p>
 			<p class="contact-title">Contact me!</p>
 			<div class="link-container">
 			<div>
