--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="left">
 			<header><strong>Hi, my name is Justin.</strong></header>
 			<p>Junior at Brown University, studying Computer Science and Applied Mathematics.</p>
-			<p>Currently a undergraduate teaching assistant for CS1010, Theory of Computation.</p>
+			<p>Currently an undergraduate teaching assistant for CS1010, Theory of Computation.</p>
 			<p>Experience with software engineering, web development, and data science.</p>
 			<p>Avid basketball fan.</p>
 		</div>
@@ -51,7 +51,7 @@
 				</a>
 			</div>
 			<div>
-				<a href="cs.docx">
+				<a href="cs.pdf">
 				<img class="contact" src="csv.png" height="42" width="42">
 				</a>
 			</div>
