--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 	<div class="content">
 		<div class="left">
 			<header><strong>Hi, my name is Justin.</strong></header>
-			<p>Junior at Brown University, studying Computer Science and Applied Mathematics.</p>
-			<p>Currently an undergraduate teaching assistant for CS1010, Theory of Computation.</p>
-			<p>Experience with software engineering, web development, and data science.</p>
+			<p>Senior at Brown University, studying Computer Science.</p>
+			<p>Currently an undergraduate teaching assistant for CS1570, Algorithms.</p>
+			<p>Former Software Engineer Intern on Growth at Pinterest.</p>
 			<p>Avid basketball fan.</p>
 		</div>
 		<div class="right">
 			<img class="logo" src="logo.png" height="60" width="60">
-			<p class="tag"> 2018 </p>
+			<p class="tag"> 2019 </p>
 			<p class="contact-title">Contact me!</p>
 			<div class="link-container">
 			<div>
 				
-				<a href="https://www.w3schools.com">
+				<a href="https://www.facebook.com/justinzhang12">
 				<img class="contact" src="iconmonstr-facebook-5-240.png" height="42" width="42">
 				</a>
 			</div>
@@ -51,7 +51,12 @@
 				</a>
 			</div>
 			<div>
-				<a href="cs.pdf">
+				<a href="https://www.pinterest.com/justinzhang416/">
+				<img class="contact" src="iconmonstr-pinterest-1-240.png" height="42" width="42">
+				</a>
+			</div>
+			<div>
+				<a href="Justin.Zhang.2020.pdf">
 				<img class="contact" src="csv.png" height="42" width="42">
 				</a>
 			</div>
